// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokens creates bootstrap color theme 1`] = `
Object {
  "accent": "#0dcaf0",
  "dark": "#111212",
  "error": "#B02A37",
  "info": "#052C64",
  "light": "#bbbcbd",
  "palette-am-blue": Object {
    "base": "#0c419a",
    "darken20": "#0a347b",
    "darken40": "#07275c",
    "darken60": "#051a3e",
    "darken80": "#020d1f",
    "lighten20": "#3d67ae",
    "lighten40": "#6d8dc2",
    "lighten60": "#9eb3d7",
    "lighten80": "#ced9eb",
    "lighten90": "#e7ecf5",
    "lighten97": "#f8f9fc",
  },
  "palette-bootstrap-am-blue": Object {
    "base": "#0d6efd",
    "darken20": "#0B58CA",
    "darken40": "#084298",
    "darken60": "#052C64",
    "darken80": "#020d1f",
    "lighten20": "#0C6DFD",
    "lighten40": "#3D8BFD",
    "lighten60": "#6EA7FD",
    "lighten80": "#9EC5FE",
    "lighten90": "#CFE1FE",
    "lighten97": "#031733",
  },
  "palette-bootstrap-brick": Object {
    "base": "#dc3545",
    "darken20": "#B02A37",
    "darken40": "#831F29",
    "darken60": "#58151C",
    "darken80": "#2C0B0F",
    "lighten20": "#dc3d4d",
    "lighten40": "#E35C6A",
    "lighten60": "#E9868F",
    "lighten80": "#F1AEB5",
    "lighten90": "#F8D7D9",
    "lighten97": "#fdfafa",
  },
  "palette-bootstrap-cyan": Object {
    "base": "#0dcaf0",
    "darken20": "#07A2C0",
    "darken40": "#06798F",
    "darken60": "#055160",
    "darken80": "#032830",
    "lighten20": "#10CAF0",
    "lighten40": "#37BFDB",
    "lighten60": "#6DDEF6",
    "lighten80": "#9EEAF9",
    "lighten90": "#CEF4FC",
    "lighten97": "#f7fcfe",
  },
  "palette-bootstrap-frosted-blue": Object {
    "base": "#65aec1",
    "darken20": "#518b9a",
    "darken40": "#3d6874",
    "darken60": "#28464d",
    "darken80": "#142327",
    "lighten20": "#84becd",
    "lighten40": "#a3ceda",
    "lighten60": "#c1dfe6",
    "lighten80": "#e0eff3",
    "lighten90": "#f0f7f9",
    "lighten97": "#fafdfd",
  },
  "palette-bootstrap-green": Object {
    "base": "#198754",
    "darken20": "#136B42",
    "darken40": "#0F5132",
    "darken60": "#0B3622",
    "darken80": "#051C12",
    "lighten20": "#1e8a57",
    "lighten40": "#479F76",
    "lighten60": "#75B798",
    "lighten80": "#A3CFBB",
    "lighten90": "#D1E6DD",
    "lighten97": "#fafdfb",
  },
  "palette-bootstrap-grey": Object {
    "base": "#adb5bd",
    "darken20": "#6C757D",
    "darken40": "#485056",
    "darken60": "#343A3F",
    "darken80": "#212529",
    "lighten20": "#b5bcc3",
    "lighten40": "#CED4D9",
    "lighten60": "#DEE2E6",
    "lighten80": "#E9ECEF",
    "lighten90": "#F8F9FA",
    "lighten97": "#fafafa",
  },
  "palette-bootstrap-mauve": Object {
    "base": "#6f42c1",
    "darken20": "#59359A",
    "darken40": "#3D0A91",
    "darken60": "#2B1A4D",
    "darken80": "#170D26",
    "lighten20": "#6F42C1",
    "lighten40": "#8B67CD",
    "lighten60": "#A98EDA",
    "lighten80": "#C5B3E5",
    "lighten90": "#E1D9F3",
    "lighten97": "#fcfafd",
  },
  "palette-bootstrap-orange": Object {
    "base": "#fd7e14",
    "darken20": "#CA6410",
    "darken40": "#984C0B",
    "darken60": "#643208",
    "darken80": "#321904",
    "lighten20": "#fb8325",
    "lighten40": "#FD9843",
    "lighten60": "#FEB272",
    "lighten80": "#FECBA1",
    "lighten90": "#FFE5D0",
    "lighten97": "#fefaf9",
  },
  "palette-bootstrap-parme": Object {
    "base": "#6610f2",
    "darken20": "#520DC1",
    "darken40": "#3D0A91",
    "darken60": "#290661",
    "darken80": "#150330",
    "lighten20": "#661de3",
    "lighten40": "#8540F5",
    "lighten60": "#A270F7",
    "lighten80": "#C19EFA",
    "lighten90": "#E0CFFC",
    "lighten97": "#fbfcfd",
  },
  "palette-bootstrap-pink": Object {
    "base": "#d63384",
    "darken20": "#AA2869",
    "darken40": "#801F4F",
    "darken60": "#561435",
    "darken80": "#2B0A1B",
    "lighten20": "#D63384",
    "lighten40": "#DD5C9D",
    "lighten60": "#E685B5",
    "lighten80": "#EFADCD",
    "lighten90": "#F7D6E6",
    "lighten97": "#fef8fb",
  },
  "palette-bootstrap-turquoise": Object {
    "base": "#20c997",
    "darken20": "#1AA179",
    "darken40": "#0F5132",
    "darken60": "#0B3622",
    "darken80": "#051C12",
    "lighten20": "#28cf9e",
    "lighten40": "#4DD4AC",
    "lighten60": "#78DFC0",
    "lighten80": "#A5E9D5",
    "lighten90": "#D2F4E9",
    "lighten97": "#f7fcfc",
  },
  "palette-bootstrap-yellow": Object {
    "base": "#ffc107",
    "darken20": "#CB9A07",
    "darken40": "#997305",
    "darken60": "#664D04",
    "darken80": "#332602",
    "lighten20": "#fdc312",
    "lighten40": "#FFCD38",
    "lighten60": "#FFD969",
    "lighten80": "#FFE69C",
    "lighten90": "#FFF2CD",
    "lighten97": "#fffdf8",
  },
  "palette-brick": Object {
    "base": "#cd545b",
    "darken20": "#a44349",
    "darken40": "#7b3237",
    "darken60": "#522224",
    "darken80": "#291112",
    "lighten20": "#d7767c",
    "lighten40": "#e1989d",
    "lighten60": "#ebbbbd",
    "lighten80": "#f5ddde",
    "lighten90": "#faeeef",
    "lighten97": "#fdfafa",
  },
  "palette-cyan": Object {
    "base": "#00a5df",
    "darken20": "#0084b2",
    "darken40": "#006386",
    "darken60": "#004259",
    "darken80": "#00212d",
    "lighten20": "#33b7e5",
    "lighten40": "#66c9ec",
    "lighten60": "#99dbf2",
    "lighten80": "#ccedf9",
    "lighten90": "#e5f6fc",
    "lighten97": "#f7fcfe",
  },
  "palette-frosted-blue": Object {
    "base": "#65aec1",
    "darken20": "#518b9a",
    "darken40": "#3d6874",
    "darken60": "#28464d",
    "darken80": "#142327",
    "lighten20": "#84becd",
    "lighten40": "#a3ceda",
    "lighten60": "#c1dfe6",
    "lighten80": "#e0eff3",
    "lighten90": "#f0f7f9",
    "lighten97": "#fafdfd",
  },
  "palette-green": Object {
    "base": "#56c271",
    "darken20": "#459b5a",
    "darken40": "#347444",
    "darken60": "#224e2d",
    "darken80": "#112717",
    "lighten20": "#78ce8d",
    "lighten40": "#9adaaa",
    "lighten60": "#bbe7c6",
    "lighten80": "#ddf3e3",
    "lighten90": "#eef9f1",
    "lighten97": "#fafdfb",
  },
  "palette-grey": Object {
    "base": "#545859",
    "darken20": "#434647",
    "darken40": "#323535",
    "darken60": "#222324",
    "darken80": "#111212",
    "lighten20": "#76797a",
    "lighten40": "#989b9b",
    "lighten60": "#bbbcbd",
    "lighten80": "#dddede",
    "lighten90": "#eeeeee",
    "lighten97": "#fafafa",
  },
  "palette-mauve": Object {
    "base": "#a05bb6",
    "darken20": "#804992",
    "darken40": "#60376d",
    "darken60": "#402449",
    "darken80": "#201224",
    "lighten20": "#b37cc5",
    "lighten40": "#c69dd3",
    "lighten60": "#d9bde2",
    "lighten80": "#ecdef0",
    "lighten90": "#f5eff8",
    "lighten97": "#fcfafd",
  },
  "palette-orange": Object {
    "base": "#e04f39",
    "darken20": "#b33f2e",
    "darken40": "#862f22",
    "darken60": "#5a2017",
    "darken80": "#2d100b",
    "lighten20": "#e67261",
    "lighten40": "#ec9588",
    "lighten60": "#f3b9b0",
    "lighten80": "#f9dcd7",
    "lighten90": "#fcedeb",
    "lighten97": "#fefaf9",
  },
  "palette-parme": Object {
    "base": "#758cc0",
    "darken20": "#5e709a",
    "darken40": "#465473",
    "darken60": "#2f384d",
    "darken80": "#171c26",
    "lighten20": "#91a3cd",
    "lighten40": "#acbad9",
    "lighten60": "#c8d1e6",
    "lighten80": "#e3e8f2",
    "lighten90": "#f1f3f9",
    "lighten97": "#fbfcfd",
  },
  "palette-pink": Object {
    "base": "#e11a81",
    "darken20": "#b41567",
    "darken40": "#87104d",
    "darken60": "#5a0a34",
    "darken80": "#2d051a",
    "lighten20": "#e7489a",
    "lighten40": "#ed76b3",
    "lighten60": "#f3a3cd",
    "lighten80": "#f9d1e6",
    "lighten90": "#fce8f2",
    "lighten97": "#fef8fb",
  },
  "palette-turquoise": Object {
    "base": "#00ab8e",
    "darken20": "#008972",
    "darken40": "#006755",
    "darken60": "#004439",
    "darken80": "#00221c",
    "lighten20": "#33bca5",
    "lighten40": "#66cdbb",
    "lighten60": "#99ddd2",
    "lighten80": "#cceee8",
    "lighten90": "#e5f7f4",
    "lighten97": "#f7fcfc",
  },
  "palette-yellow": Object {
    "base": "#f0b323",
    "darken20": "#c08f1c",
    "darken40": "#906b15",
    "darken60": "#60480e",
    "darken80": "#302407",
    "lighten20": "#f3c24f",
    "lighten40": "#f6d17b",
    "lighten60": "#f9e1a7",
    "lighten80": "#fcf0d3",
    "lighten90": "#fdf7e9",
    "lighten97": "#fffdf8",
  },
  "primary": "#084298",
  "risquePro": "#cd545b",
  "secondary": "#801F4F",
  "success": "#479F76",
  "warning": "#FFF2CD",
}
`;

exports[`tokens creates color theme 1`] = `
Object {
  "accent": "#00a5df",
  "error": "#b33f2e",
  "info": "#0c419a",
  "palette-am-blue": Object {
    "base": "#0c419a",
    "darken20": "#0a347b",
    "darken40": "#07275c",
    "darken60": "#051a3e",
    "darken80": "#020d1f",
    "lighten20": "#3d67ae",
    "lighten40": "#6d8dc2",
    "lighten60": "#9eb3d7",
    "lighten80": "#ced9eb",
    "lighten90": "#e7ecf5",
    "lighten97": "#f8f9fc",
  },
  "palette-bootstrap-am-blue": Object {
    "base": "#0d6efd",
    "darken20": "#0B58CA",
    "darken40": "#084298",
    "darken60": "#052C64",
    "darken80": "#020d1f",
    "lighten20": "#0C6DFD",
    "lighten40": "#3D8BFD",
    "lighten60": "#6EA7FD",
    "lighten80": "#9EC5FE",
    "lighten90": "#CFE1FE",
    "lighten97": "#031733",
  },
  "palette-bootstrap-brick": Object {
    "base": "#dc3545",
    "darken20": "#B02A37",
    "darken40": "#831F29",
    "darken60": "#58151C",
    "darken80": "#2C0B0F",
    "lighten20": "#dc3d4d",
    "lighten40": "#E35C6A",
    "lighten60": "#E9868F",
    "lighten80": "#F1AEB5",
    "lighten90": "#F8D7D9",
    "lighten97": "#fdfafa",
  },
  "palette-bootstrap-cyan": Object {
    "base": "#0dcaf0",
    "darken20": "#07A2C0",
    "darken40": "#06798F",
    "darken60": "#055160",
    "darken80": "#032830",
    "lighten20": "#10CAF0",
    "lighten40": "#37BFDB",
    "lighten60": "#6DDEF6",
    "lighten80": "#9EEAF9",
    "lighten90": "#CEF4FC",
    "lighten97": "#f7fcfe",
  },
  "palette-bootstrap-frosted-blue": Object {
    "base": "#65aec1",
    "darken20": "#518b9a",
    "darken40": "#3d6874",
    "darken60": "#28464d",
    "darken80": "#142327",
    "lighten20": "#84becd",
    "lighten40": "#a3ceda",
    "lighten60": "#c1dfe6",
    "lighten80": "#e0eff3",
    "lighten90": "#f0f7f9",
    "lighten97": "#fafdfd",
  },
  "palette-bootstrap-green": Object {
    "base": "#198754",
    "darken20": "#136B42",
    "darken40": "#0F5132",
    "darken60": "#0B3622",
    "darken80": "#051C12",
    "lighten20": "#1e8a57",
    "lighten40": "#479F76",
    "lighten60": "#75B798",
    "lighten80": "#A3CFBB",
    "lighten90": "#D1E6DD",
    "lighten97": "#fafdfb",
  },
  "palette-bootstrap-grey": Object {
    "base": "#adb5bd",
    "darken20": "#6C757D",
    "darken40": "#485056",
    "darken60": "#343A3F",
    "darken80": "#212529",
    "lighten20": "#b5bcc3",
    "lighten40": "#CED4D9",
    "lighten60": "#DEE2E6",
    "lighten80": "#E9ECEF",
    "lighten90": "#F8F9FA",
    "lighten97": "#fafafa",
  },
  "palette-bootstrap-mauve": Object {
    "base": "#6f42c1",
    "darken20": "#59359A",
    "darken40": "#3D0A91",
    "darken60": "#2B1A4D",
    "darken80": "#170D26",
    "lighten20": "#6F42C1",
    "lighten40": "#8B67CD",
    "lighten60": "#A98EDA",
    "lighten80": "#C5B3E5",
    "lighten90": "#E1D9F3",
    "lighten97": "#fcfafd",
  },
  "palette-bootstrap-orange": Object {
    "base": "#fd7e14",
    "darken20": "#CA6410",
    "darken40": "#984C0B",
    "darken60": "#643208",
    "darken80": "#321904",
    "lighten20": "#fb8325",
    "lighten40": "#FD9843",
    "lighten60": "#FEB272",
    "lighten80": "#FECBA1",
    "lighten90": "#FFE5D0",
    "lighten97": "#fefaf9",
  },
  "palette-bootstrap-parme": Object {
    "base": "#6610f2",
    "darken20": "#520DC1",
    "darken40": "#3D0A91",
    "darken60": "#290661",
    "darken80": "#150330",
    "lighten20": "#661de3",
    "lighten40": "#8540F5",
    "lighten60": "#A270F7",
    "lighten80": "#C19EFA",
    "lighten90": "#E0CFFC",
    "lighten97": "#fbfcfd",
  },
  "palette-bootstrap-pink": Object {
    "base": "#d63384",
    "darken20": "#AA2869",
    "darken40": "#801F4F",
    "darken60": "#561435",
    "darken80": "#2B0A1B",
    "lighten20": "#D63384",
    "lighten40": "#DD5C9D",
    "lighten60": "#E685B5",
    "lighten80": "#EFADCD",
    "lighten90": "#F7D6E6",
    "lighten97": "#fef8fb",
  },
  "palette-bootstrap-turquoise": Object {
    "base": "#20c997",
    "darken20": "#1AA179",
    "darken40": "#0F5132",
    "darken60": "#0B3622",
    "darken80": "#051C12",
    "lighten20": "#28cf9e",
    "lighten40": "#4DD4AC",
    "lighten60": "#78DFC0",
    "lighten80": "#A5E9D5",
    "lighten90": "#D2F4E9",
    "lighten97": "#f7fcfc",
  },
  "palette-bootstrap-yellow": Object {
    "base": "#ffc107",
    "darken20": "#CB9A07",
    "darken40": "#997305",
    "darken60": "#664D04",
    "darken80": "#332602",
    "lighten20": "#fdc312",
    "lighten40": "#FFCD38",
    "lighten60": "#FFD969",
    "lighten80": "#FFE69C",
    "lighten90": "#FFF2CD",
    "lighten97": "#fffdf8",
  },
  "palette-brick": Object {
    "base": "#cd545b",
    "darken20": "#a44349",
    "darken40": "#7b3237",
    "darken60": "#522224",
    "darken80": "#291112",
    "lighten20": "#d7767c",
    "lighten40": "#e1989d",
    "lighten60": "#ebbbbd",
    "lighten80": "#f5ddde",
    "lighten90": "#faeeef",
    "lighten97": "#fdfafa",
  },
  "palette-cyan": Object {
    "base": "#00a5df",
    "darken20": "#0084b2",
    "darken40": "#006386",
    "darken60": "#004259",
    "darken80": "#00212d",
    "lighten20": "#33b7e5",
    "lighten40": "#66c9ec",
    "lighten60": "#99dbf2",
    "lighten80": "#ccedf9",
    "lighten90": "#e5f6fc",
    "lighten97": "#f7fcfe",
  },
  "palette-frosted-blue": Object {
    "base": "#65aec1",
    "darken20": "#518b9a",
    "darken40": "#3d6874",
    "darken60": "#28464d",
    "darken80": "#142327",
    "lighten20": "#84becd",
    "lighten40": "#a3ceda",
    "lighten60": "#c1dfe6",
    "lighten80": "#e0eff3",
    "lighten90": "#f0f7f9",
    "lighten97": "#fafdfd",
  },
  "palette-green": Object {
    "base": "#56c271",
    "darken20": "#459b5a",
    "darken40": "#347444",
    "darken60": "#224e2d",
    "darken80": "#112717",
    "lighten20": "#78ce8d",
    "lighten40": "#9adaaa",
    "lighten60": "#bbe7c6",
    "lighten80": "#ddf3e3",
    "lighten90": "#eef9f1",
    "lighten97": "#fafdfb",
  },
  "palette-grey": Object {
    "base": "#545859",
    "darken20": "#434647",
    "darken40": "#323535",
    "darken60": "#222324",
    "darken80": "#111212",
    "lighten20": "#76797a",
    "lighten40": "#989b9b",
    "lighten60": "#bbbcbd",
    "lighten80": "#dddede",
    "lighten90": "#eeeeee",
    "lighten97": "#fafafa",
  },
  "palette-mauve": Object {
    "base": "#a05bb6",
    "darken20": "#804992",
    "darken40": "#60376d",
    "darken60": "#402449",
    "darken80": "#201224",
    "lighten20": "#b37cc5",
    "lighten40": "#c69dd3",
    "lighten60": "#d9bde2",
    "lighten80": "#ecdef0",
    "lighten90": "#f5eff8",
    "lighten97": "#fcfafd",
  },
  "palette-orange": Object {
    "base": "#e04f39",
    "darken20": "#b33f2e",
    "darken40": "#862f22",
    "darken60": "#5a2017",
    "darken80": "#2d100b",
    "lighten20": "#e67261",
    "lighten40": "#ec9588",
    "lighten60": "#f3b9b0",
    "lighten80": "#f9dcd7",
    "lighten90": "#fcedeb",
    "lighten97": "#fefaf9",
  },
  "palette-parme": Object {
    "base": "#758cc0",
    "darken20": "#5e709a",
    "darken40": "#465473",
    "darken60": "#2f384d",
    "darken80": "#171c26",
    "lighten20": "#91a3cd",
    "lighten40": "#acbad9",
    "lighten60": "#c8d1e6",
    "lighten80": "#e3e8f2",
    "lighten90": "#f1f3f9",
    "lighten97": "#fbfcfd",
  },
  "palette-pink": Object {
    "base": "#e11a81",
    "darken20": "#b41567",
    "darken40": "#87104d",
    "darken60": "#5a0a34",
    "darken80": "#2d051a",
    "lighten20": "#e7489a",
    "lighten40": "#ed76b3",
    "lighten60": "#f3a3cd",
    "lighten80": "#f9d1e6",
    "lighten90": "#fce8f2",
    "lighten97": "#fef8fb",
  },
  "palette-turquoise": Object {
    "base": "#00ab8e",
    "darken20": "#008972",
    "darken40": "#006755",
    "darken60": "#004439",
    "darken80": "#00221c",
    "lighten20": "#33bca5",
    "lighten40": "#66cdbb",
    "lighten60": "#99ddd2",
    "lighten80": "#cceee8",
    "lighten90": "#e5f7f4",
    "lighten97": "#f7fcfc",
  },
  "palette-yellow": Object {
    "base": "#f0b323",
    "darken20": "#c08f1c",
    "darken40": "#906b15",
    "darken60": "#60480e",
    "darken80": "#302407",
    "lighten20": "#f3c24f",
    "lighten40": "#f6d17b",
    "lighten60": "#f9e1a7",
    "lighten80": "#fcf0d3",
    "lighten90": "#fdf7e9",
    "lighten97": "#fffdf8",
  },
  "primary": "#0c419a",
  "risquePro": "#cd545b",
  "secondary": "#006386",
  "success": "#56c271",
  "warning": "#f0b323",
}
`;

exports[`tokens registers all tokens 1`] = `
Object {
  "colors": Object {
    "accent": "#0dcaf0",
    "amBlue": Object {
      "base": "#0c419a",
      "darken20": "#0a347b",
      "darken40": "#07275c",
      "darken60": "#051a3e",
      "darken80": "#020d1f",
      "lighten20": "#3d67ae",
      "lighten40": "#6d8dc2",
      "lighten60": "#9eb3d7",
      "lighten80": "#ced9eb",
      "lighten90": "#e7ecf5",
      "lighten97": "#f8f9fc",
    },
    "brick": Object {
      "base": "#cd545b",
      "darken20": "#a44349",
      "darken40": "#7b3237",
      "darken60": "#522224",
      "darken80": "#291112",
      "lighten20": "#d7767c",
      "lighten40": "#e1989d",
      "lighten60": "#ebbbbd",
      "lighten80": "#f5ddde",
      "lighten90": "#faeeef",
      "lighten97": "#fdfafa",
    },
    "cyan": Object {
      "base": "#00a5df",
      "darken20": "#0084b2",
      "darken40": "#006386",
      "darken60": "#004259",
      "darken80": "#00212d",
      "lighten20": "#33b7e5",
      "lighten40": "#66c9ec",
      "lighten60": "#99dbf2",
      "lighten80": "#ccedf9",
      "lighten90": "#e5f6fc",
      "lighten97": "#f7fcfe",
    },
    "dark": "#111212",
    "error": "#B02A37",
    "frostedBlue": Object {
      "base": "#65aec1",
      "darken20": "#518b9a",
      "darken40": "#3d6874",
      "darken60": "#28464d",
      "darken80": "#142327",
      "lighten20": "#84becd",
      "lighten40": "#a3ceda",
      "lighten60": "#c1dfe6",
      "lighten80": "#e0eff3",
      "lighten90": "#f0f7f9",
      "lighten97": "#fafdfd",
    },
    "green": Object {
      "base": "#56c271",
      "darken20": "#459b5a",
      "darken40": "#347444",
      "darken60": "#224e2d",
      "darken80": "#112717",
      "lighten20": "#78ce8d",
      "lighten40": "#9adaaa",
      "lighten60": "#bbe7c6",
      "lighten80": "#ddf3e3",
      "lighten90": "#eef9f1",
      "lighten97": "#fafdfb",
    },
    "grey": Object {
      "base": "#545859",
      "darken20": "#434647",
      "darken40": "#323535",
      "darken60": "#222324",
      "darken80": "#111212",
      "lighten20": "#76797a",
      "lighten40": "#989b9b",
      "lighten60": "#bbbcbd",
      "lighten80": "#dddede",
      "lighten90": "#eeeeee",
      "lighten97": "#fafafa",
    },
    "info": "#052C64",
    "light": "#bbbcbd",
    "mauve": Object {
      "base": "#a05bb6",
      "darken20": "#804992",
      "darken40": "#60376d",
      "darken60": "#402449",
      "darken80": "#201224",
      "lighten20": "#b37cc5",
      "lighten40": "#c69dd3",
      "lighten60": "#d9bde2",
      "lighten80": "#ecdef0",
      "lighten90": "#f5eff8",
      "lighten97": "#fcfafd",
    },
    "orange": Object {
      "base": "#e04f39",
      "darken20": "#b33f2e",
      "darken40": "#862f22",
      "darken60": "#5a2017",
      "darken80": "#2d100b",
      "lighten20": "#e67261",
      "lighten40": "#ec9588",
      "lighten60": "#f3b9b0",
      "lighten80": "#f9dcd7",
      "lighten90": "#fcedeb",
      "lighten97": "#fefaf9",
    },
    "parme": Object {
      "base": "#758cc0",
      "darken20": "#5e709a",
      "darken40": "#465473",
      "darken60": "#2f384d",
      "darken80": "#171c26",
      "lighten20": "#91a3cd",
      "lighten40": "#acbad9",
      "lighten60": "#c8d1e6",
      "lighten80": "#e3e8f2",
      "lighten90": "#f1f3f9",
      "lighten97": "#fbfcfd",
    },
    "pink": Object {
      "base": "#e11a81",
      "darken20": "#b41567",
      "darken40": "#87104d",
      "darken60": "#5a0a34",
      "darken80": "#2d051a",
      "lighten20": "#e7489a",
      "lighten40": "#ed76b3",
      "lighten60": "#f3a3cd",
      "lighten80": "#f9d1e6",
      "lighten90": "#fce8f2",
      "lighten97": "#fef8fb",
    },
    "primary": "#084298",
    "risquePro": "#cd545b",
    "secondary": "#801F4F",
    "success": "#479F76",
    "turquoise": Object {
      "base": "#00ab8e",
      "darken20": "#008972",
      "darken40": "#006755",
      "darken60": "#004439",
      "darken80": "#00221c",
      "lighten20": "#33bca5",
      "lighten40": "#66cdbb",
      "lighten60": "#99ddd2",
      "lighten80": "#cceee8",
      "lighten90": "#e5f7f4",
      "lighten97": "#f7fcfc",
    },
    "warning": "#FFF2CD",
    "yellow": Object {
      "base": "#f0b323",
      "darken20": "#c08f1c",
      "darken40": "#906b15",
      "darken60": "#60480e",
      "darken80": "#302407",
      "lighten20": "#f3c24f",
      "lighten40": "#f6d17b",
      "lighten60": "#f9e1a7",
      "lighten80": "#fcf0d3",
      "lighten90": "#fdf7e9",
      "lighten97": "#fffdf8",
    },
  },
  "dialogWidth": Object {
    "dialogMedium": "800px",
    "dialogSmall": "560px",
  },
  "inputWidth": Object {
    "inputLarge": "384px",
    "inputMedium": "328px",
    "inputSmall": "128px",
    "inputXLarge": "536px",
  },
  "pageWidth": "1440px",
}
`;
